--- a/src/styles/component.css
+++ b/src/styles/component.css
@@ -4,3 +4,25 @@
     margin: 1rem;
     padding: 1rem;
 }
+
+#calendarWeek {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    background-color : #f1f1f1;
+}
+
+@media (max-width: 800px) {
+    #calendarWeek {
+      flex-direction: column;
+    }
+  }
+
+#calendarDay {;
+    flex-grow: 1;
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+    line-height: 100%;
+    font-size: 2em;
+  }
