--- a/src/styles/tasktypes.css
+++ b/src/styles/tasktypes.css
@@ -23,7 +23,7 @@
     background-color: lightgray;
   }
   
-  .menu > li > button {
+  .menu > li {
     width: 100%;
     height: 100%;
     text-align: left;
